--- a/ObjectPool/ObjectPool.csproj
+++ b/ObjectPool/ObjectPool.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{420082E0-B3C8-4B60-A738-BC2D54831224}</ProjectGuid>
+    <ProjectGuid>{9E3AD951-376D-462D-BFF3-6AE1BF909AC1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DesignPatterns.Interpreter</RootNamespace>
-    <AssemblyName>LogicalInterpreter</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>ObjectPool</RootNamespace>
+    <AssemblyName>ObjectPool</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -32,19 +32,19 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AndExpression.cs" />
-    <Compile Include="ConstantTerminalExpression.cs" />
-    <Compile Include="Context.cs" />
-    <Compile Include="IExpression.cs" />
-    <Compile Include="Interpreter.cs" />
-    <Compile Include="NotExpression.cs" />
-    <Compile Include="OrExpression.cs" />
-    <Compile Include="VariableTerminalExpression.cs" />
-    <Compile Include="XorExpression.cs" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="ObjectPool.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
