--- a/Decorator/4 - Decorator.csproj
+++ b/Decorator/4 - Decorator.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AssemblyName>DesignPatterns.Decorator</AssemblyName>
+    <RootNamespace>DesignPatterns.Decorator</RootNamespace>
   </PropertyGroup>
 
 </Project>
