--- a/Builder/3 - Builder.csproj
+++ b/Builder/3 - Builder.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>DesignPatterns.Builder</RootNamespace>
+    <AssemblyName>DesignPatterns.Builder</AssemblyName>
   </PropertyGroup>
 
 </Project>
