--- a/Interpreter/5 - Interpreter.csproj
+++ b/Interpreter/5 - Interpreter.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>DesignPatterns.Interpreter</AssemblyName>
+    <RootNamespace>DesignPatterns.Interpreter</RootNamespace>
   </PropertyGroup>
 
 </Project>
