--- a/LazyInitialization/6 - LazyInitialization.csproj
+++ b/LazyInitialization/6 - LazyInitialization.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>DesigPatterns.LazyInitialization</RootNamespace>
+    <AssemblyName>DesigPatterns.LazyInitialization</AssemblyName>
   </PropertyGroup>
 
 </Project>
