--- a/Prototype/4 - Prototype.csproj
+++ b/Prototype/4 - Prototype.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>DesignPatterns.Prototype</RootNamespace>
+    <AssemblyName>DesignPatterns.Prototype</AssemblyName>
   </PropertyGroup>
 
 </Project>
