--- a/Singleton/5 - Singleton.csproj
+++ b/Singleton/5 - Singleton.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>DesignPatterns.Singleton</RootNamespace>
+    <AssemblyName>DesignPatterns.Singleton</AssemblyName>
   </PropertyGroup>
 
 </Project>
