--- a/TemplateMethod/6 - TemplateMethod.csproj
+++ b/TemplateMethod/6 - TemplateMethod.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>DesignPatterns.TemplateMethod</AssemblyName>
+    <RootNamespace>DesignPatterns.TemplateMethod</RootNamespace>
   </PropertyGroup>
 
 </Project>
